@@ -37,6 +37,7 @@ Please visit http://aegisub.net to download latest version
 - Rows colliding with the currently active one will now be highlighted in grid (AMZ)
 - Selected comments are now highlighted in a different color (AMZ)
 - Added a volume slider bar to audio mode (AMZ)
+- Fixed behavior of deleting and joining lines on subtitles grid (AMZ)
 
 
 = 1.09 beta - 2006.01.16 ===========================
